Fix padding issue with benefits on mobile

--- a/public/assets/css/_scss/benefits.scss
+++ b/public/assets/css/_scss/benefits.scss
@@ -2,6 +2,19 @@
   padding: 60px 0px 60px 0px;
 }
 
+.col.benefit:not(:first-of-type) {
+  padding-top: 40px;
+}
+
+@media (min-width: 600px) {
+  .col.benefit {
+    padding-top: 0px;
+  }
+  .col.benefit:not(:first-of-type) {
+    padding-top: 0px;
+  }
+}
+
 .benefit__heading {
   display: block;
   font-size: 1.3rem;
